# internship-monitor-bot

./: .gitignore  README.md  internship_bot.py  internship_bot1.py  list.csv  list1.csv  pyproject.toml
automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
