[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automation"
version = "0.0.1"
description = "Automation project"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
]
